# RL

./: .gitignore  README.md  pyproject.toml
checkpoints/gamma-0.995/: checkpoint_000655360.onnx  checkpoint_000655360.onnx.data  checkpoint_000655360.pt  checkpoint_001310720.onnx  checkpoint_001310720.onnx.data  checkpoint_001310720.pt  checkpoint_001966080.onnx  checkpoint_001966080.onnx.data  checkpoint_001966080.pt  checkpoint_002621440.onnx  checkpoint_002621440.onnx.data  checkpoint_002621440.pt  checkpoint_003276800.onnx  checkpoint_003276800.onnx.data  checkpoint_003276800.pt  checkpoint_003932160.onnx  checkpoint_003932160.onnx.data  checkpoint_003932160.pt  checkpoint_004587520.onnx  checkpoint_004587520.onnx.data  checkpoint_004587520.pt  checkpoint_005242880.onnx  checkpoint_005242880.onnx.data  checkpoint_005242880.pt  checkpoint_005898240.onnx  checkpoint_005898240.onnx.data  checkpoint_005898240.pt  checkpoint_006553600.onnx  checkpoint_006553600.onnx.data  checkpoint_006553600.pt  checkpoint_007208960.onnx  checkpoint_007208960.onnx.data  checkpoint_007208960.pt  checkpoint_007864320.onnx  checkpoint_007864320.onnx.data  checkpoint_007864320.pt  checkpoint_008519680.onnx  checkpoint_008519680.onnx.data  checkpoint_008519680.pt  checkpoint_009175040.onnx  (+8 more)
iads/: README.md  __init__.py  default.yaml  game.py  gym_env.py  sim_engine.py
ppo/: __init__.py  buffer.py  config.py  config.yaml  logger.py  model.py  ppo.py  render.py  trainer.py  utils.py
scripts/: agent_inference.py  compare_checkpoints.py  ppo_impl.py  run_studies.sh
(+112 files in other folders)
